css/styles.css
/* GENERAL */
:root {
    --color-primario: #393939;
    --color-secundario: #ececec;
}

@font-face {
    font-family: "Orbitron";
    src: url("./assets/Orbitron-Black.ttf") format("truetype");
    font-weight: 900; /* weight for black */
}

@font-face {
    font-family: "Orbitron";
    src: url("./assets/Orbitron-Bold.ttf") format("truetype");
    font-weight: 700; /* weight for bold */
}

@font-face {
    font-family: "Orbitron";
    src: url("./assets/Orbitron-Medium.ttf") format("truetype");
    font-weight: 500; /* weight for medium */
}

@font-face {
    font-family: "Orbitron";
    src: url("./assets/Orbitron-Regular.ttf") format("truetype");
    font-weight: 400; /* weight for regular */
}

.body {
    background: rgb(247, 113, 113);
    background: linear-gradient(90deg, rgba(247, 113, 113, 0.7) 21%, rgba(84, 188, 215, 0.7) 73%);
}

.page-container {
    padding: 20px 0;
    max-width: 70%;
    margin: 0 auto;
    min-height: 100vh;
    background-color: #fff;
    -webkit-box-shadow: 0px 0px 19px 4px rgba(0, 0, 0, 0.75);
    -moz-box-shadow: 0px 0px 19px 4px rgba(0, 0, 0, 0.75);
    box-shadow: 0px 0px 19px 4px rgba(0, 0, 0, 0.75);
}

@media (max-width: 1000px) {
    .page-container {
        max-width: 80%;
    }
}

@media (max-width: 800px) {
    .page-container {
        max-width: 90%;
    }
}

@media (max-width: 550px) {
    .page-container {
        max-width: 95%;
    }
}

/* FIN GENERAL */

/* HEADER */
.header {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.header__img {
    width: 100px;
    margin-bottom: 10px;
}

.header__h1 {
    font-family: "Orbitron", sans-serif;
    font-weight: 900;
    font-size: 48px;
    color: #000;
    margin-bottom: 20px;
    display: none;
}

.header__p {
    font-family: "Orbitron", sans-serif;
    font-weight: 700;
    font-size: 26px;
    color: #000;
}

.header__logo-text {
    width: 350px;
    height: 50px;
    margin-bottom: 10px;
}

@media (max-width: 600px) {
    .header__img {
        width: 80px;
        margin-bottom: 7px;
    }

    .header__p {
        font-size: 20px;
    }

    .header__logo-text {
        width: 270px;
        height: 50px;
        margin-bottom: 5px;
    }
}

@media (max-width: 350px) {
    .header__img {
        width: 50px;
        margin-bottom: 5px;
    }

    .header__p {
        font-size: 16px;
    }

    .header__logo-text {
        width: 200px;
        height: 30px;
        margin-bottom: 5px;
    }
}

/* FIN HEADER */

/* BANNER */
.banner__img {
    width: 100%;
    margin: 40px 0;
    border-top: 2px solid var(--color-primario);
    border-bottom: 2px solid var(--color-primario);
}

@media (max-width: 600px) {
    .banner__img {
        margin: 20px 0;
        border-top: 1px solid var(--color-primario);
        border-bottom: 1px solid var(--color-primario);
    }
}

@media (max-width: 350px) {
    .banner__img {
        margin: 20px 0;
    }
}

/* FIN BANNER */

/* MAIN */
.main {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 50px;
    padding: 0 20px;
    text-align: center;
}

.main__p {
    color: #000;
}

.main__p,
.main__a {
    font-size: 22px;
    font-weight: 600;
    margin-bottom: 5px;
}

.main__p-light,
.main__a {
    font-size: 16px;
    font-weight: 400;
}

.main__a {
    font-weight: 600;
}

.main__p-seleccion {
    margin-top: 30px;
}

.main__h2 {
    font-family: "Orbitron", sans-serif;
    font-weight: 900;
    font-size: 38px;
    color: #000;
    margin-bottom: 20px;
}
@media (max-width: 600px) {
    .main__h2 {
        font-size: 28px;
    }
    .main__p,
    .main__a {
        font-size: 18px;
        font-weight: 600;
        margin-bottom: 5px;
    }
    .main__p-light,
    .main__a {
        font-size: 14px;
        font-weight: 400;
        color: #000;
    }
    .main__a {
        font-weight: 600;
    }
}

.main__a {
    padding: 7px;
    border: 1px solid var(--color-primario);
    border-radius: 3px;
    margin-top: 10px;
    background-color: rgba(247, 113, 113, 0.7);
}
.main__a-215 {
    background-color: rgba(84, 188, 215, 0.7);
}

.main__a:hover {
    -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
    -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
}

.main__a:active {
    -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
    -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
}

.main__img {
    height: 50px;
    width: auto;
    margin: 35px 0;
}

.imgs-container {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-evenly;
    width: 100%;
}

.card {
    width: 250px;
    padding: 10px;
    text-align: center;
}

.card__h3 {
    font-weight: 900;
}

.card__h3,
.card__p {
    font-family: "Orbitron", sans-serif;
    color: var(--color-primario);
    margin: 5px 0;
}

/* .puzzle-img {
    height: 200px;
    cursor: pointer;
    transition: filter 0.3s ease;
    object-fit: cover;
    object-position: center center;
    position: relative;
} */

.puzzle-img.grayscale {
    filter: grayscale(100%);
}

.fullscreen-overlay {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.8);
    justify-content: center;
    align-items: center;
}

.fullscreen-img {
    max-width: 90%;
    max-height: 90%;
    object-fit: contain;
}

.close-btn {
    position: absolute;
    top: 20px;
    right: 20px;
    font-size: 40px;
    color: white;
    cursor: pointer;
}

.puzzle-img-wrapper {
    position: relative;
    display: inline-block; /* or block if you want to make it a block element */
}

.puzzle-img.grayscale + .diagonal-bar-90,
.puzzle-img.grayscale + .diagonal-bar-215 {
    display: block;
}

.diagonal-bar-90,
.diagonal-bar-215 {
    content: "";
    position: absolute;
    top: 0;
    left: 54%;
    width: 3px;
    height: 100%;
    background: rgba(255, 0, 0, 0.5);
    z-index: 1;
    display: none; /* Initially hidden */
}

.diagonal-bar-90 {
    transform: rotate(48deg);
    transform-origin: center center;
}

.diagonal-bar-215 {
    left: 54%;
    transform: rotate(58deg); /* Ajusta este valor según sea necesario */
    transform-origin: center center;
}

.puzzle-img {
    display: block;
    height: 200px;
    cursor: pointer;
    transition: filter 0.3s ease;
    object-fit: cover;
    object-position: center center;
    position: relative;
    z-index: 0; /* Ensure the image is behind the pseudo-element */
}

/* FIN MAIN */

